--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 DependsTester
 
-DependencyTester is a console application that will profile an application with dependency walker.
-The goal is to verify that all dll's that are used are the ones that are bundled with the application.
+DependencyTester is a console application that will profile an application with dependency walker. The goal is to verify that all dll's that are used are the ones that are bundled with the application.
 
 DependencyTester checks for four types of errors:
 	1.  Mixture of CPUType.
@@ -10,10 +9,7 @@ DependencyTester checks for four types of errors:
 	4. Invalid load path.
 
 With dependency walker it is very easy to verify the first 3 but not the 4th. 
-DependencyTester on the other hand considers any DLL that isn't located in a Windows system folder or 
-with the executable to be invalid. For example this helps spot an issue where an application depends on 
-Qt but hasn't properly installed the Qt dll's, but the program runs because it loads a different programs 
-installed Qt dll's that are in the users PATH enviorment variable.
+DependencyTester on the other hand considers any DLL that isn't located in a Windows system folder or with the executable to be invalid. For example this helps spot an issue when an application depends on Qt but hasn't properly installed the Qt dll's. The program runs because it loads a different programs installed Qt dll's that are in the users PATH enviorment variable.
 
 Requires:
   Dependency Walker - www.dependencywalker.com
